[tool.poetry]
name = "cgap-pipeline-main"
version = "1.1.0"
description = "Main repository for deploying pipelines that impelement the CGAP-pipeline specification."
authors = ["CGAP Team"]

[tool.poetry.dependencies]

python = ">=3.7,<3.9"
dcicutils = "^6.3.0"
boto3 = "^1.20.15"
awscli = "^1.22.15"
magma-suite = "^1.0.1"

cgap-pipeline-utils = { path = "./cgap-pipeline-utils", develop = true }

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
